--- a/previews/ONI.html
+++ b/previews/ONI.html
@@ -496,27 +496,32 @@
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/sets\ONI-files\img\1t_Fan.png" id="1t_Fan" data-flag="@X" onclick="openSidebar('1t_Fan',false)"></div>
 			<div class="container"><img alt="/sets\ONI-files\img\2t_Void Nightmare.png" id="2t_Void Nightmare" data-flag="@X" onclick="openSidebar('2t_Void Nightmare',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\16t_Spirit Nightmare.png" id="16t_Spirit Nightmare" data-flag="@X" onclick="openSidebar('16t_Spirit Nightmare',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\21t_Artifact Soldier.png" id="21t_Artifact Soldier" data-flag="@X" onclick="openSidebar('21t_Artifact Soldier',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\22t_Treasure.png" id="22t_Treasure" data-flag="@X" onclick="openSidebar('22t_Treasure',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\23t_Station Robot.png" id="23t_Station Robot" data-flag="@X" onclick="openSidebar('23t_Station Robot',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\19t_Spirit Nightmare.png" id="19t_Spirit Nightmare" data-flag="@X" onclick="openSidebar('19t_Spirit Nightmare',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\24t_Artifact Soldier.png" id="24t_Artifact Soldier" data-flag="@X" onclick="openSidebar('24t_Artifact Soldier',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\25t_Treasure.png" id="25t_Treasure" data-flag="@X" onclick="openSidebar('25t_Treasure',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\26t_Station Robot.png" id="26t_Station Robot" data-flag="@X" onclick="openSidebar('26t_Station Robot',false)"></div>
 			<div class="container"><img alt="/sets\ONI-files\img\3t_Dragon Spirit.png" id="3t_Dragon Spirit" data-flag="@X" onclick="openSidebar('3t_Dragon Spirit',false)"></div>
 			<div class="container"><img alt="/sets\ONI-files\img\4t_Spirit Samurai.png" id="4t_Spirit Samurai" data-flag="@X" onclick="openSidebar('4t_Spirit Samurai',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\5t_Cat Spirit.png" id="5t_Cat Spirit" data-flag="@X" onclick="openSidebar('5t_Cat Spirit',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\6t_Demon Horror.png" id="6t_Demon Horror" data-flag="@X" onclick="openSidebar('6t_Demon Horror',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\7t_Shark Spirit.png" id="7t_Shark Spirit" data-flag="@X" onclick="openSidebar('7t_Shark Spirit',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\8t_Soldier.png" id="8t_Soldier" data-flag="@X" onclick="openSidebar('8t_Soldier',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\9t_Elemental Bird.png" id="9t_Elemental Bird" data-flag="@X" onclick="openSidebar('9t_Elemental Bird',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\10t_Elk Spirit.png" id="10t_Elk Spirit" data-flag="@X" onclick="openSidebar('10t_Elk Spirit',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\11t_Goggles.png" id="11t_Goggles" data-flag="@X" onclick="openSidebar('11t_Goggles',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\19t_Weird.png" id="19t_Weird" data-flag="@X" onclick="openSidebar('19t_Weird',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\12t_Dragon.png" id="12t_Dragon" data-flag="@X" onclick="openSidebar('12t_Dragon',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\13t_Human Illusion.png" id="13t_Human Illusion" data-flag="@X" onclick="openSidebar('13t_Human Illusion',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\14t_Rebel.png" id="14t_Rebel" data-flag="@X" onclick="openSidebar('14t_Rebel',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\15t_Spirit Beast.png" id="15t_Spirit Beast" data-flag="@X" onclick="openSidebar('15t_Spirit Beast',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\17t_Student.png" id="17t_Student" data-flag="@X" onclick="openSidebar('17t_Student',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\18t_Student Advisor.png" id="18t_Student Advisor" data-flag="@X" onclick="openSidebar('18t_Student Advisor',false)"></div>
-			<div class="container"><img alt="/sets\ONI-files\img\20t_Wolf Spirit.png" id="20t_Wolf Spirit" data-flag="@X" onclick="openSidebar('20t_Wolf Spirit',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\5t_Vehicle.png" id="5t_Vehicle" data-flag="@X" onclick="openSidebar('5t_Vehicle',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\6t_Cat.png" id="6t_Cat" data-flag="@X" onclick="openSidebar('6t_Cat',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\7t_Demon Horror.png" id="7t_Demon Horror" data-flag="@X" onclick="openSidebar('7t_Demon Horror',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\8t_Shark Spirit.png" id="8t_Shark Spirit" data-flag="@X" onclick="openSidebar('8t_Shark Spirit',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\9t_Skeleton.png" id="9t_Skeleton" data-flag="@X" onclick="openSidebar('9t_Skeleton',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\10t_Soldier.png" id="10t_Soldier" data-flag="@X" onclick="openSidebar('10t_Soldier',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\11t_Wolf Nightmare.png" id="11t_Wolf Nightmare" data-flag="@X" onclick="openSidebar('11t_Wolf Nightmare',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\12t_Elemental Bird.png" id="12t_Elemental Bird" data-flag="@X" onclick="openSidebar('12t_Elemental Bird',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\13t_Elk Spirit.png" id="13t_Elk Spirit" data-flag="@X" onclick="openSidebar('13t_Elk Spirit',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\14t_Goggles.png" id="14t_Goggles" data-flag="@X" onclick="openSidebar('14t_Goggles',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\22t_Weird.png" id="22t_Weird" data-flag="@X" onclick="openSidebar('22t_Weird',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\15t_Dragon.png" id="15t_Dragon" data-flag="@X" onclick="openSidebar('15t_Dragon',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\16t_Human Illusion.png" id="16t_Human Illusion" data-flag="@X" onclick="openSidebar('16t_Human Illusion',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\17t_Rebel.png" id="17t_Rebel" data-flag="@X" onclick="openSidebar('17t_Rebel',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\18t_Spirit Beast.png" id="18t_Spirit Beast" data-flag="@X" onclick="openSidebar('18t_Spirit Beast',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\20t_Student.png" id="20t_Student" data-flag="@X" onclick="openSidebar('20t_Student',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\21t_Student Advisor.png" id="21t_Student Advisor" data-flag="@X" onclick="openSidebar('21t_Student Advisor',false)"></div>
+			<div class="container"><img alt="/sets\ONI-files\img\23t_Wolf Spirit.png" id="23t_Wolf Spirit" data-flag="@X" onclick="openSidebar('23t_Wolf Spirit',false)"></div>
+			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
