--- a/all-sets.html
+++ b/all-sets.html
@@ -103,6 +103,13 @@
 				<div>269</div>
 			</a>
 			
+			<a href="/sets/MSY" class="set-row"> 
+				<img src="/sets/MSY-files/icon.png">
+				<div class="set-title">MSEM Mystery Community Slots</div>
+				<div>MSY</div>
+				<div>40</div>
+			</a>
+			
 			<a href="/sets/ONI" class="set-row"> 
 				<img src="/sets/ONI-files/icon.png">
 				<div class="set-title">Onigaiko: Future Past</div>
