--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
 									<div class="set-icon-name">Drauholm: Winter’s Approach</div></a>
 								</div>
 				<div class="set-icon-container">
+									<a href="previews/MSY"><div class="set-icon"><img src="sets/MSY-files/icon.png" title="MSEM Mystery Community Slots"></img></div>
+									<div class="set-icon-name">MSEM Mystery Community Slots</div></a>
+								</div>
+				<div class="set-icon-container">
 									<a href="previews/ONI"><div class="set-icon"><img src="sets/ONI-files/icon.png" title="Onigaiko: Future Past"></img></div>
 									<div class="set-icon-name">Onigaiko: Future Past</div></a>
 								</div>
