--- a/previews/RSD.html
+++ b/previews/RSD.html
@@ -176,6 +176,7 @@
 	<img class="preload-hidden" src="/img/dot.png" />
 	<img class="preload-hidden" src="/sets/RSD-files/logo.png" />
 	<img class="preload-hidden" src="/sets/DWA-files/icon.png" />
+		<img class="preload-hidden" src="/sets/MSY-files/icon.png" />
 		<img class="preload-hidden" src="/sets/ONI-files/icon.png" />
 		<img class="preload-hidden" src="/sets/RSD-files/icon.png" />
 		<img class="preload-hidden" src="/sets/URA-files/icon.png" />
@@ -195,6 +196,8 @@
 		<a class="set-bar" href="RSD"><img src="/sets/RSD-files/icon.png">Risemara: Second Dawn</a>
 	
 		<a class="set-bar inactive" href="DWA"><img src="/sets/DWA-files/icon.png">Drauholm: Winter’s Approach</a>
+	
+		<a class="set-bar inactive" href="MSY"><img src="/sets/MSY-files/icon.png">MSEM Mystery Community Slots</a>
 	
 		<a class="set-bar inactive" href="ONI"><img src="/sets/ONI-files/icon.png">Onigaiko: Future Past</a>
 	
