--- a/previews/MSY.html
+++ b/previews/MSY.html
@@ -224,7 +224,7 @@
 				<div class="container"><img alt="/sets\MSY-files\img\16_Undead Diva.png" id="16_Undead Diva" data-flag="@X" onclick="openSidebar('16_Undead Diva',false)"></div>
 				<div class="container"><img alt="/sets\MSY-files\img\23_Skarvith Champion.png" id="23_Skarvith Champion" data-flag="@X" onclick="openSidebar('23_Skarvith Champion',false)"></div>
 				<div class="container"><img alt="/sets\MSY-files\img\26_Gruesome Emergence.png" id="26_Gruesome Emergence" data-flag="@X" onclick="openSidebar('26_Gruesome Emergence',false)"></div>
-				<div class="container"><img alt="/sets\MSY-files\img\4_Radiant Commander.png" id="4_Radiant Commander" data-flag="@X" onclick="openSidebar('4_Radiant Commander',false)"></div>
+				<div class="container"><img alt="/sets\MSY-files\img\4_Radiant General.png" id="4_Radiant General" data-flag="@X" onclick="openSidebar('4_Radiant General',false)"></div>
 				<div class="container"><img alt="/sets\MSY-files\img\11_Lysandra's Accomplice.png" id="11_Lysandras Accomplice" data-flag="@X" onclick="openSidebar('11_Lysandras Accomplice',false)"></div>
 				<div class="container"><img alt="/sets\MSY-files\img\17_Veil-Pierced Diabolist.png" id="17_Veil-Pierced Diabolist" data-flag="@X" onclick="openSidebar('17_Veil-Pierced Diabolist',false)"></div>
 				<div class="container"><img alt="/sets\MSY-files\img\24_Thundering Twins.png" id="24_Thundering Twins" data-flag="@X" onclick="openSidebar('24_Thundering Twins',false)"></div>
